using Aevatar.Agents.Core.EventSourcing;
using EventSourcingDemo.Events;
using Microsoft.Extensions.Logging;
using Demo.Agents;
using Google.Protobuf;

namespace EventSourcingDemo;

/// <summary>
/// æ”¯æŒ EventSourcing çš„é“¶è¡Œè´¦æˆ· Agent
/// ä½¿ç”¨æ–°çš„æ‰¹é‡æäº¤å’Œçº¯å‡½æ•°å¼çŠ¶æ€è½¬æ¢æ¨¡å¼
/// </summary>
public class BankAccountAgent : GAgentBaseWithEventSourcing<BankAccountState>
{
    // No constructor needed - uses base class default constructor
    
    public override Task<string> GetDescriptionAsync()
    {
        return Task.FromResult($"Bank Account Agent for {State.AccountHolder}");
    }

    /// <summary>
    /// Get current state (for demo/testing)
    /// </summary>
    public BankAccountState GetState() => State;

    // ========== Business Operations (ä½¿ç”¨æ–° API) ==========

    /// <summary>
    /// åˆ›å»ºè´¦æˆ·
    /// </summary>
    public async Task CreateAccountAsync(string accountHolder, decimal initialBalance = 0)
    {
        Logger?.LogInformation("Creating account for {Holder} with initial balance ${Balance}", 
            accountHolder, initialBalance);

        var evt = new AccountCreated
        {
            AccountHolder = accountHolder,
            InitialBalance = (double)initialBalance
        };
        
        // âœ… æ–° API: RaiseEvent (æš‚å­˜)
        RaiseEvent(evt, new Dictionary<string, string>
        {
            ["Operation"] = "CreateAccount",
            ["AccountHolder"] = accountHolder
        });

        // âœ… æ–° API: ConfirmEventsAsync (æ‰¹é‡æäº¤)
        await ConfirmEventsAsync();

        Logger?.LogInformation("Account created successfully. Version: {Version}", GetCurrentVersion());
    }

    /// <summary>
    /// å­˜æ¬¾
    /// </summary>
    public async Task DepositAsync(decimal amount, string description = "")
    {
        if (amount <= 0)
        {
            throw new ArgumentException("Deposit amount must be positive", nameof(amount));
        }

        Logger?.LogInformation("Depositing ${Amount}: {Description}", amount, description);

        var evt = new MoneyDeposited
        {
            Amount = (double)amount,
            Description = description ?? $"Deposit at {DateTime.UtcNow:yyyy-MM-dd HH:mm:ss}"
        };

        // âœ… æ–° API: RaiseEvent (æš‚å­˜)
        RaiseEvent(evt, new Dictionary<string, string>
        {
            ["Operation"] = "Deposit",
            ["Amount"] = amount.ToString("F2")
        });

        // âœ… æ–° API: ConfirmEventsAsync (æ‰¹é‡æäº¤)
        await ConfirmEventsAsync();

        Logger?.LogInformation("Deposit confirmed. New balance: ${Balance}", State.Balance);
    }

    /// <summary>
    /// å–æ¬¾
    /// </summary>
    public async Task WithdrawAsync(decimal amount, string description = "")
    {
        if (amount <= 0)
        {
            throw new ArgumentException("Withdrawal amount must be positive", nameof(amount));
        }

        if (State.Balance < (double)amount)
        {
            throw new InvalidOperationException(
                $"Insufficient balance. Current: ${State.Balance:F2}, Requested: ${amount:F2}");
        }

        Logger?.LogInformation("Withdrawing ${Amount}: {Description}", amount, description);

        var evt = new MoneyWithdrawn
        {
            Amount = (double)amount,
            Description = description ?? $"Withdrawal at {DateTime.UtcNow:yyyy-MM-dd HH:mm:ss}"
        };

        // âœ… æ–° API: RaiseEvent (æš‚å­˜)
        RaiseEvent(evt, new Dictionary<string, string>
        {
            ["Operation"] = "Withdraw",
            ["Amount"] = amount.ToString("F2")
        });

        // âœ… æ–° API: ConfirmEventsAsync (æ‰¹é‡æäº¤)
        await ConfirmEventsAsync();

        Logger?.LogInformation("Withdrawal confirmed. New balance: ${Balance}", State.Balance);
    }

    /// <summary>
    /// æ‰¹é‡äº¤æ˜“ï¼ˆå±•ç¤ºæ‰¹é‡æäº¤ä¼˜åŠ¿ï¼‰
    /// </summary>
    public async Task BatchTransactionsAsync(
        IEnumerable<(string type, decimal amount, string description)> transactions)
    {
        Logger?.LogInformation("Starting batch transactions...");

        // âœ… æ–° API ä¼˜åŠ¿: å¯ä»¥å…ˆæš‚å­˜å¤šä¸ªäº‹ä»¶ï¼Œç„¶åä¸€æ¬¡æ€§æäº¤
        foreach (var (type, amount, description) in transactions)
        {
            IMessage evt = type.ToLower() switch
            {
                "deposit" => new MoneyDeposited 
                { 
                    Amount = (double)amount, 
                    Description = description 
                },
                "withdraw" => new MoneyWithdrawn 
                { 
                    Amount = (double)amount, 
                    Description = description 
                },
                _ => throw new ArgumentException($"Unknown transaction type: {type}")
            };

            RaiseEvent(evt);  // æš‚å­˜ï¼Œä¸ç«‹å³æäº¤
        }

        // âœ… ä¸€æ¬¡æ€§æ‰¹é‡æäº¤æ‰€æœ‰äº‹ä»¶
        await ConfirmEventsAsync();

        Logger?.LogInformation("Batch transactions completed. New balance: ${Balance}", State.Balance);
    }

    // ========== Pure Functional State Transition (æ–° API) ==========

    /// <summary>
    /// âœ… çº¯å‡½æ•°å¼çŠ¶æ€è½¬æ¢
    /// æ¡†æ¶å·²è‡ªåŠ¨CloneçŠ¶æ€ï¼Œå¼€å‘è€…åªéœ€ä¿®æ”¹ä¼ å…¥çš„stateå³å¯
    /// </summary>
    protected override void TransitionState(BankAccountState state, IMessage evt)
    {
        Logger?.LogInformation("ğŸ”„ TransitionState called with event type: {EventType}", evt.GetType().Name);
        Logger?.LogInformation("   Current state: Balance=${Balance}, Transactions={Count}", state.Balance, state.TransactionCount);

        switch (evt)
        {
            case AccountCreated created:
                Logger?.LogInformation("   âœ… Matched AccountCreated: Holder={Holder}, InitialBalance={Balance}", 
                    created.AccountHolder, created.InitialBalance);
                state.AccountHolder = created.AccountHolder;
                state.Balance = created.InitialBalance;
                state.TransactionCount = 0;
                state.History.Add($"[{DateTime.UtcNow:HH:mm:ss}] Account created for {created.AccountHolder}");
                break;

            case MoneyDeposited deposited:
                Logger?.LogInformation("   âœ… Matched MoneyDeposited: Amount={Amount}", deposited.Amount);
                state.Balance += deposited.Amount;
                state.TransactionCount++;
                state.History.Add(
                    $"[{state.TransactionCount}] Deposited ${deposited.Amount:F2} - {deposited.Description}");
                break;

            case MoneyWithdrawn withdrawn:
                Logger?.LogInformation("   âœ… Matched MoneyWithdrawn: Amount={Amount}", withdrawn.Amount);
                state.Balance -= withdrawn.Amount;
                state.TransactionCount++;
                state.History.Add(
                    $"[{state.TransactionCount}] Withdrew ${withdrawn.Amount:F2} - {withdrawn.Description}");
                break;
                
            default:
                Logger?.LogWarning("   âŒ Unknown event type in switch: {EventType}", evt.GetType().FullName);
                break;
        }

        Logger?.LogInformation("   New state: Balance=${Balance}, Transactions={Count}", state.Balance, state.TransactionCount);
    }
}
